# TXTArchiver

./: CMakeLists.txt  README.md  main.cpp
Archiver/: Archiver.cpp  Archiver.h  CMakeLists.txt  Messages.h  UI.cpp  UI.h
Archiver/HuffmanTree/: CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.h
